--- a/getusermedia-cape-video-demo.html
+++ b/getusermedia-cape-video-demo.html
@@ -7,7 +7,7 @@
 <link rel="import"
       href="getusermedia-cape.html">
 
-<dom-module id="getusermedia-cape-demo">
+<dom-module id="getusermedia-cape-video-demo">
   
   <template>
     
@@ -91,8 +91,8 @@
     
   </template>
   
-  <script src="getusermedia-cape-demo.js"></script>
+  <script src="getusermedia-cape-video-demo.js"></script>
   
 </dom-module>
 
-<getusermedia-cape-demo></getusermedia-cape-demo>
+<getusermedia-cape-video-demo></getusermedia-cape-video-demo>
